# ss-2018b-tp4

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh  main.cpp  main1.cpp  main2.cpp  params_generator.sh  run.sh  setup_environment.sh
forces/: DampingForce.cpp  DampingForce.h  Force.h  GForce.cpp  GForce.h  HookeForce.cpp  HookeForce.h  SumForce.cpp  SumForce.h
integrators/: Beeman.cpp  Beeman.h  GearPredictorCorrector.cpp  GearPredictorCorrector.h  Integrator.h  Verlet.cpp  Verlet.h
observers/: MinimumDistanceObserver.cpp  MinimumDistanceObserver.h  MinimumJupiterDistanceObserver.cpp  MinimumJupiterDistanceObserver.h  Observer.h  OvitoObserver.cpp  OvitoObserver.h
parameters/: planets.csv  voyager.csv
python/: heat_map.py  heat_map_promedio.py  plot_positions.py
simulators/: RealSpringSimulator.cpp  RealSpringSimulator.h  Simulator.h  SpaceSimulator.cpp  SpaceSimulator.h  SpringSimulator.cpp  SpringSimulator.h
types/: Body.cpp  Body.h  RealSpring.cpp  RealSpring.h  Space.cpp  Space.h  Spring.cpp  Spring.h
utils/: LaunchSetup.cpp  LaunchSetup.h  ParamsManager.cpp  ParamsManager.h  SimulationManager.cpp  SimulationManager.h
